- added `FlowStream.remove(keys, [callback])` method for removing specific FlowStream instances
- added `UIStream.insert(schema, [callback])` method for inserting/modifying specific UIStream instances
- added `UIStream.remove(keys, [callback])` method for removing specific UIStream instances

========================
0.0.53
========================

- fixed wrong counting of week number in the `Date.format()`
- updated `flowstream.onreconfigure` by adding `init` argument
- updated `flowstreaminstance.configure` by adding `init` argument
- updated `uistream.onreconfigure` by adding `init` argument
- updated `uistreaminstance.configure` by adding `init` argument
- fixed `U.queue()` by [Martin Smola](https://github.com/molda/)
- added `@{input('type', 'name')}` for creating `<input` element
- fixed `@{text()}`, `@{textarea()}`, `@{hidden()}`, `@{radio()}` and `@{checkbox()}` by removing `id` attribute
- fixed traffic indicator in the `flowstreaminstance.newmessage()`
- fixed `op` argument in the `schema.required()`

========================
0.0.52
========================

- extended `index.d.ts` by @Helferino
- fixed cleaning zombie connections in the FlowStream
- added a retry functionality `flowinstance.trigger()` when the FlowStream isn't loaded
- added `flowstream.strict {Boolean}` property (default: `true`)
- extended `flowstream.export([type])` by adding type argument
- added support for promises for the `OPENCLIENT()` method
- added support for promises for the `FileStorage`
- added support for promises for the `HttpFile`
- added support for promises for the `TMSCLIENT().call()` method
- added support for promises for the `Mail.try()` method
- added support for promises for the `REQUEST()` method
- added support for promises for the `EXEC()` method
- added support for promises for the `JSONSCHEMA()` method
- improved RegExp for validating URL addresses by [yetingli](https://github.com/yetingli)
- fixed FlowStream delegate `instance.variables()`